# music_dumper

./: Cargo.toml  README.md
command_binary/: Cargo.toml
command_binary/src/: command.rs  main.rs
gui_binary/: Cargo.toml
music_dump_lib/: Cargo.toml
music_dump_lib/src/: error.rs  lib.rs
music_dump_lib/src/crypt/: decode.rs  mod.rs  rc4.rs
music_dump_lib/src/meta_data/: flac_metadata.rs  image.rs  lofty_metadata.rs  metadata.rs  metadata_trait.rs  mod.rs  mp3_metadata.rs  ncm_metadata.rs
music_dump_lib/src/ncm/: audio.rs  decoder.rs  dumper.rs  mod.rs  model.rs  music.rs
music_dump_lib/src/qmc/: decoder.rs  mod.rs
src/: main.rs
