[package]
name = "music_dumper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "./music_dump_lib"
]

[workspace.dependencies]
anyhow = "1.0.43"
base64 = "0.22.1"
aes = "0.8.4"
cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
thiserror = "1.0.62"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }