[package]
name = "music_dumper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "./music_dump_lib",
    "./command_binary",
    "./gui_binary"
]

# [[bin]]
# name = "music_dumper_cmd"
# path = "./src/command_binary/src/main.rs"

# [[bin]]
# name = "music_dumper_gui"
# path = "./gui_binary/src/main.rs"

[workspace.dependencies]
music_dump_lib = { path = "./music_dump_lib" }

anyhow = "1.0.43"
base64 = "0.22.1"
aes = "0.8.4"
cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
thiserror = "1.0.62"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
image = "0.25.1"
id3 = { version = "1.14.0" }
metaflac = { version = "0.2.7" }
rayon = "1.10.0"
glob = "0.3.1"
clap = { version = "4.5.0", features = ["derive"] }