[package]
name = "music_dump_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
anyhow = { workspace = true }
aes = { workspace = true }
cipher = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
id3 = { workspace = true }
image = { workspace = true, default-features = false }
rayon = { workspace = true }