[package]
name = "music_dump_lib"
version = "0.1.3"
edition = "2021"
authors = ["chanmaoganda <avaniawang@outlook.com>"]
description = "Library for dumping ncm files to mp3"
homepage = "https://github.com/chanmaoganda/NcmDumpLib"
license-file = "LICENSE"
readme = "README.md"
keywords = ["ncm", "music", "dump"]

[dependencies]
anyhow = "1.0.43"
base64 = "0.22.1"
aes = "0.8.4"
cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
thiserror = "1.0.62"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
metaflac = { version = "0.2.7" }
rayon = "1.10.0"

[dependencies.lofty]
version = "0.21.0"
optional = true

[features]
default = ["lofty"]
lofty = ["dep:lofty"]